# attic-cli

./: .gitignore  .gitmodules  CMakeLists.txt
src/: application.cpp  application.h  eventcaller.cpp  eventcaller.h  eventqueue.h  filemarker.cpp  filemarker.h  filewatcher.cpp  filewatcher.h  libcaller.cpp  libcaller.h  main.cpp  watcher.cpp  watcher.h  watchevent.cpp  watchevent.h
